@@ -15,26 +15,33 @@
  */
 package io.gravitee.am.management.handlers.management.api.authentication.controller;
 
+import io.gravitee.am.common.crypto.CryptoUtils;
+import io.gravitee.am.common.jwt.JWT;
+import io.gravitee.am.common.oidc.idtoken.Claims;
 import io.gravitee.am.common.utils.RandomString;
 import io.gravitee.am.identityprovider.api.common.Request;
 import io.gravitee.am.identityprovider.api.social.SocialAuthenticationProvider;
+import io.gravitee.am.jwt.JWTBuilder;
 import io.gravitee.am.management.handlers.management.api.authentication.manager.idp.IdentityProviderManager;
 import io.gravitee.am.management.handlers.management.api.utils.RedirectUtils;
 import io.gravitee.am.model.IdentityProvider;
 import io.gravitee.am.service.OrganizationService;
 import io.gravitee.am.service.ReCaptchaService;
 import io.reactivex.rxjava3.core.Maybe;
+import io.reactivex.rxjava3.core.Single;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
 
 import java.io.IOException;
+import java.security.Key;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -60,6 +67,7 @@ public class LoginController {
     private static final Logger LOGGER = LoggerFactory.getLogger(LoginController.class);
     private static final String LOGIN_VIEW = "login";
     private static final Map<String, String> socialProviderTypes;
+
     static {
         Map<String, String> sMap = new HashMap<>();
         sMap.put("github-am-idp", "github");
@@ -81,8 +89,16 @@ public class LoginController {
     @Autowired
     private ReCaptchaService reCaptchaService;
 
+    @Autowired
+    @Qualifier("managementJwtBuilder")
+    private JWTBuilder jwtBuilder;
+
+    @Autowired
+    @Qualifier("managementSecretKey")
+    private Key key;
+
     @RequestMapping(value = "/login")
-    public ModelAndView login(HttpServletRequest request, @RequestParam(value=ORGANIZATION_PARAMETER_NAME, defaultValue = "DEFAULT") String organizationId) {
+    public ModelAndView login(HttpServletRequest request, @RequestParam(value = ORGANIZATION_PARAMETER_NAME, defaultValue = "DEFAULT") String organizationId) {
         Map<String, Object> params = new HashMap<>();
 
         // fetch domain social identity providers
@@ -95,7 +111,7 @@ public class LoginController {
                     .map(identity -> identityProviderManager.getIdentityProvider(identity))
                     .filter(Objects::nonNull)
                     .filter(IdentityProvider::isExternal)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception ex) {
             LOGGER.error("An error has occurred while loading the organization social providers. It probably means that a social provider is not well started", ex);
         }
@@ -113,7 +129,7 @@ public class LoginController {
                 String identityId = identity.getId();
                 SocialAuthenticationProvider socialAuthenticationProvider = (SocialAuthenticationProvider) identityProviderManager.get(identityId);
                 if (socialAuthenticationProvider != null) {
-                    final Maybe<Optional<Request>> maybe = socialAuthenticationProvider.asyncSignInUrl(buildRedirectUri(request, identityId), RandomString.generate()).map(Optional::ofNullable);
+                    final Maybe<Optional<Request>> maybe = socialAuthenticationProvider.asyncSignInUrl(buildRedirectUri(request, identityId), new JWT(), this::processState).map(Optional::ofNullable);
                     maybe.blockingGet()
                             .ifPresent(idpAuthzRequest -> authorizeUrls.put(identityId, idpAuthzRequest.getUri()));
                 }
@@ -129,6 +145,15 @@ public class LoginController {
         params.put("org", organizationId);
 
         return new ModelAndView(organizationId + "#" + LOGIN_VIEW, params);
+    }
+
+    private Single<String> processState(JWT jwt) {
+        jwt.put(Claims.NONCE, RandomString.generate());
+         for (var claim: io.gravitee.am.common.jwt.Claims.requireEncryption())
+        if (jwt.containsKey(claim)) {
+            jwt.put(claim, CryptoUtils.encrypt((String) jwt.get(claim), key));
+        }
+        return Single.just(jwtBuilder.sign(jwt));
     }
 
     @RequestMapping(value = "/login/callback")
